# twm-proj

./: .flake8  .gitattributes  README.md  pyproject.toml
datasets/: load.py
datasets/01-polish-licence-plates/: README.dataset.txt  README.roboflow.txt
datasets/01-polish-licence-plates/test/: _annotations.coco.json
datasets/01-polish-licence-plates/train/: _annotations.coco.json
datasets/01-polish-licence-plates/valid/: _annotations.coco.json
datasets/03-platesmania/: _annotations.coco.json
models/: ocr.keras
notebooks/: 01-pipeline-visualization.ipynb  02-ocr-train.ipynb  02-ocry-train.ipynb  04-ocr-dataset.ipynb  utils.py
twm_proj/: licence_plate_detector.py  main.py
twm_proj/implementation/: contour_detector.py  edge_filter.py  image_reader.py  initial_filter.py  ocr.py  pre_ocr.py  rect_classifier.py  rect_deduplicator.py  rect_detector.py  rect_transformer.py
twm_proj/interface/: contour_detector.py  edge_filter.py  image_reader.py  initial_filter.py  ocr.py  pre_ocr.py  rect_classifier.py  rect_deduplicator.py  rect_detector.py  rect_filter.py  rect_transformer.py
typings/pylabel/: dataset.pyi
