[tool.poetry]
name = "twm-proj"
version = "0.1.0"
description = ""
authors = [
  "Jakub Ostrzołek <jakub.ostrzolek.stud@pw.edu.pl>",
  "Igor Anczykowski <igor.anczykowski.stud@pw.edu.pl>",
  "Jakub Winter <jakub.winter.stud@pw.edu.pl>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
pytesseract = "^0.3.10"
scikit-learn = "^1.5.0"
tensorflow = "2.15.0"
pylabel = "^0.1.55"
seaborn-image = "^0.9.0"
shapely = "^2.0.4"
wrapt = ">=1.11.0,<1.15"

[tool.poetry.scripts]
main = "twm_proj.main:main"

[tool.poetry.group.dev.dependencies]
ipython = "^8.23.0"
ipykernel = "^6.29.4"
matplotlib = "^3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
